# DoodleJump

./: .gitmodules  CMakeLists.txt  GameModel.cpp  GameModel.hpp  README.md  main.cpp
components/: Component.hpp  Input.hpp  Position.hpp  Size.hpp  Sprite.hpp
entities/: Entity.cpp  Entity.hpp  LocalPlayer.cpp  LocalPlayer.hpp
src/: CMakeLists.txt  GameModel.cpp  GameModel.hpp  client.developer.json  client.settings.json  main.cpp
src/assets/audio/: credit.txt
src/components/: AnimatedSprite.hpp  Audio.hpp  AudioSource.hpp  Component.hpp  Input.hpp  Movement.hpp  Position.hpp  RectangularCollider.hpp  RigidBody.hpp  ScriptBase.hpp  Size.hpp  Sprite.hpp  Text.hpp
src/entities/: Entity.cpp  Entity.hpp  LocalPlayer.cpp  LocalPlayer.hpp  TestEntity.cpp  TestEntity.hpp
src/misc/: Configuration.cpp  Configuration.hpp  ConfigurationPath.hpp  Content.cpp  Content.hpp  ContentKey.hpp  MusicPlayer.cpp  MusicPlayer.hpp  SoundPlayer.cpp  SoundPlayer.hpp  math.cpp  math.hpp  misc.cpp  misc.hpp
src/scripts/: PlayerPhysics.cpp  PlayerPhysics.hpp
src/systems/: AnimationRenderer.cpp  AnimationRenderer.hpp  AudioSystem.cpp  AudioSystem.hpp  Collision.cpp  Collision.hpp  FontRenderer.cpp  FontRenderer.hpp  KeyboardInput.cpp  KeyboardInput.hpp  Physics.cpp  Physics.hpp  PhysicsScripting.cpp  PhysicsScripting.hpp  Renderer.cpp  Renderer.hpp  Scripting.cpp  Scripting.hpp  System.cpp  System.hpp
systems/: Renderer.cpp  Renderer.hpp  System.cpp  System.hpp
